--- a/src/main/resources/static/css/recipeCSS.css
+++ b/src/main/resources/static/css/recipeCSS.css
@@ -1,6 +1,12 @@
-body {
+body
+{
+    margin: 0;
+    padding: 0;
+}
+
+#body-div {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: rgba(243, 172, 172, 0.8);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,6 +18,7 @@ body {
 h1 {
     text-align: center;
     color: #333;
+    color : #a86f6f;
 }
 
 #chatForm {
@@ -27,17 +34,18 @@ h1 {
 }
 
 button {
-    background-color: #007bff;
+    background-color: #ed6666;
     color: #fff;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 15px;
 }
 
 #response {
     text-align: center;
-    padding: 20px;
+    padding: 150px 250px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -46,14 +54,4 @@ button {
 
 #chatForm, #response {
     max-width: 400px;
-}
-
-@media (max-width: 600px) {
-    #message {
-        width: 100%;
-    }
-
-    #chatForm, #response {
-        width: 90%;
-    }
 }
