--- a/src/main/resources/static/css/recipeCSS.css
+++ b/src/main/resources/static/css/recipeCSS.css
@@ -1,5 +1,4 @@
-body
-{
+body {
     margin: 0;
     padding: 0;
 }
@@ -10,15 +9,15 @@ body
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
+    padding-bottom: 50px;
+    min-height: 100vh;
 }
 
 h1 {
     text-align: center;
     color: #333;
-    color : #a86f6f;
+    color: #a86f6f;
+    padding-top: 50px;
 }
 
 #chatForm {
@@ -48,17 +47,20 @@ button {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    min-width: 150px;
-    min-height: 250px;
+    padding: 20px;
+    min-width: 30%;
+
 }
 
 #chatForm, #response-box {
-    max-width: 400px;
+    max-width: 60%;
 }
 
-#response
-{
+#response {
     white-space: pre-wrap;
     min-width: 150px;
     min-height: 250px;
+    font-family: Arial, sans-serif;
 }
+
+
