--- a/src/main/resources/static/css/ingredientCSS.css
+++ b/src/main/resources/static/css/ingredientCSS.css
@@ -117,6 +117,7 @@ h1 {
     padding: 5px 15px 5px 5px;
     text-align: left;
     min-height: 30px;
+    min-width: 160px;
     display: flex;
     align-items: center;
     justify-content: space-between;
